--- a/index.html
+++ b/index.html
@@ -16,13 +16,81 @@
             <li> <a href="">Портфолио</a> </li>
             <li> <a href="">Контакты</a> </li>
         </ul>
+        </nav>
 
+        <section>
         <ul>
             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
             <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
         </ul>
-        </nav>
+        </section>
+        
 
     </header>
+
+    <main>
+
+    <div>
+        <section> 
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <a href="">Заказать услугу</a>
+        </section>
+    </div>
+
+    <section>
+        <!-- Скрытый заголовок --> 
+        <h2>Наши преимущества</h2>
+        <ul>
+            <li>
+                <h3>Внимание к деталям</h3>
+                <p>
+                    Идейные соображения, а также начало повседневной работы по формированию позиции.
+                </p>
+            </li>
+            <li>
+                <h3>Пунктуальность</h3>
+                <p>
+                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                </p>
+            </li>
+            <li>
+                <h3>Планирование</h3>
+                <p>
+                    Равным образом консультация с широким активом в значительной степени обуславливает.
+                </p>
+            </li>
+            <li>
+                <h3>Современные технологии</h3>
+                <p>
+                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                </p>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li>
+                <a href="">
+                <img src="images/our_projects_1.jpg" alt="Архитектура и логика"/>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="images/our_projects_2.jpg" alt="Разработка интерфейса" />
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="images/our_projects_3.jpg" alt="Дизайн" />
+                </a>
+            </li>
+        </ul>
+    </section>
+    
+</main>
+
+
 </body>
 </html> 
