Добавляет секцию Team

--- a/index.html
+++ b/index.html
@@ -73,18 +73,47 @@
         <ul>
             <li>
                 <a href="">
-                <img src="images/our_projects_1.jpg" alt="Архитектура и логика"/>
+                <img src="images/our_projects_1.jpg" alt="Архитектура и логика" width="370"/>
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="images/our_projects_2.jpg" alt="Разработка интерфейса" />
+                    <img src="images/our_projects_2.jpg" alt="Разработка интерфейса" width="370"/>
                 </a>
             </li>
             <li>
                 <a href="">
-                    <img src="images/our_projects_3.jpg" alt="Дизайн" />
+                    <img src="images/our_projects_3.jpg" alt="Дизайн" width="370"/>
                 </a>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <ul>
+            <li>
+                <figure>
+                    <img src="images/team_card_1.jpg" alt="Product Designer" width="270"/>
+                    <figcaption>Игорь Демьяненко <br> Product Designer</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="images/team_card_2.jpg" alt="Frontend Developer" width="270" />
+                    <figcaption>Ольга Репина <br> Frontend Developer</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="images/team_card_3.jpg" alt="Marketing" width="270" />
+                    <figcaption>Николай Тарасов <br> Marketing</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="images/team_card_4.jpg" alt="UI Designer" width="270" />
+                    <figcaption>Михаил Ермаков <br> UI Designer</figcaption>
+                </figure>
             </li>
         </ul>
     </section>
