--- a/index.html
+++ b/index.html
@@ -117,9 +117,16 @@
             </li>
         </ul>
     </section>
-    
-</main>
+    </main>
 
+    <footer>
+        <a href="">WebStudio</a>
+        <address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+        </address>
+    </footer>
 
 </body>
 </html> 
