--- a/index.html
+++ b/index.html
@@ -1,117 +1,158 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <header>   
-            <nav>
-                <a href="">WebStudio</a>
-                <ul>
-                    <li> <a href="">Студия</a> </li>
-                    <li> <a href="">Портфолио</a> </li>
-                    <li> <a href="">Контакты</a> </li>
-                </ul>
-            </nav>
-            
-            <section>
-                <!--Скрытый заголовок-->
-                <h2>Контакты</h2>
-                <ul>
-                    <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                    <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
-                </ul>
-            </section>    
-        </header>
-        
-        <main>
-            <section> 
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <a href="">Заказать услугу</a>
-            </section>
-            <section>
-                <!-- Скрытый заголовок --> 
-                <h2>Особенности</h2>
-                <ul>
-                    <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li>
-                    <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li>
-                    <li>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li>
-                    <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="images/our_projects_1.jpg" alt="Архитектура и логика" width="370"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/our_projects_2.jpg" alt="Разработка интерфейса" width="370"/>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="images/our_projects_3.jpg" alt="Дизайн" width="370"/>
-                        </a>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
-                    <li>
-                        <figure>
-                            <img src="images/team_card_1.jpg" alt="Product Designer" width="270"/>
-                            <figcaption>Игорь Демьяненко <br> Product Designer</figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/team_card_2.jpg" alt="Frontend Developer" width="270" />
-                            <figcaption>Ольга Репина <br> Frontend Developer</figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/team_card_3.jpg" alt="Marketing" width="270" />
-                            <figcaption>Николай Тарасов <br> Marketing</figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/team_card_4.jpg" alt="UI Designer" width="270" />
-                            <figcaption>Михаил Ермаков <br> UI Designer</figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </section>
-        </main>
-
-        <footer>
-            <a href="">WebStudio</a>
-            <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
-        </footer>
-
-    </body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студия</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <!--Навигация-->
+        <a href="">WebStudio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <section>
+        <!--Скрытый заголовок, контакы-->
+        <h2>Контакты</h2>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </section>
+    </header>
+    <main>
+      <section>
+        <!--Герой-->
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+      </section>
+      <section>
+        <!-- Скрытый заголовок, особенности -->
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!--Виды работ-->
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="images/our_projects_1.jpg"
+                alt="Архитектура и логика"
+                width="370"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images/our_projects_2.jpg"
+                alt="Разработка интерфейса"
+                width="370"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/our_projects_3.jpg" alt="Дизайн" width="370" />
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!--Представление команды-->
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <figure>
+              <img
+                src="images/team_card_1.jpg"
+                alt="Product Designer"
+                width="270"
+              />
+              <figcaption>
+                <h3>Игорь Демьяненко</h3>
+                <p>Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="images/team_card_2.jpg"
+                alt="Frontend Developer"
+                width="270"
+              />
+              <figcaption>
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/team_card_3.jpg" alt="Marketing" width="270" />
+              <figcaption>
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/team_card_4.jpg" alt="UI Designer" width="270" />
+              <figcaption>
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="">WebStudio</a>
+      <address>
+        <!--Контактная информация-->
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
+    </footer>
+  </body>
+</html>
