--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <section>
-        <!--Скрытый заголовок, контакы-->
-        <h2>Контакты</h2>
+      <adress>
+        <!--Kонтакы-->
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-      </section>
+      </adress>
     </header>
     <main>
       <section>
@@ -72,7 +71,7 @@
           <li>
             <a href="">
               <img
-                src="images/our_projects_1.jpg"
+                src="./images/our_projects_1.jpg"
                 alt="Архитектура и логика"
                 width="370"
               />
@@ -81,7 +80,7 @@
           <li>
             <a href="">
               <img
-                src="images/our_projects_2.jpg"
+                src="./images/our_projects_2.jpg"
                 alt="Разработка интерфейса"
                 width="370"
               />
@@ -89,7 +88,7 @@
           </li>
           <li>
             <a href="">
-              <img src="images/our_projects_3.jpg" alt="Дизайн" width="370" />
+              <img src="./images/our_projects_3.jpg" alt="Дизайн" width="370" />
             </a>
           </li>
         </ul>
@@ -101,21 +100,21 @@
           <li>
             <figure>
               <img
-                src="images/team_card_1.jpg"
-                alt="Product Designer"
+                src="./images/team_card_1.jpg"
+                alt="Игорь Демьяненко"
                 width="270"
               />
               <figcaption>
                 <h3>Игорь Демьяненко</h3>
-                <p>Designer</p>
+                <p>Product Designer</p>
               </figcaption>
             </figure>
           </li>
           <li>
             <figure>
               <img
-                src="images/team_card_2.jpg"
-                alt="Frontend Developer"
+                src="./images/team_card_2.jpg"
+                alt="Ольга Репина"
                 width="270"
               />
               <figcaption>
@@ -126,7 +125,11 @@
           </li>
           <li>
             <figure>
-              <img src="images/team_card_3.jpg" alt="Marketing" width="270" />
+              <img
+                src="./images/team_card_3.jpg"
+                alt="Николай Тарасов"
+                width="270"
+              />
               <figcaption>
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
@@ -135,7 +138,11 @@
           </li>
           <li>
             <figure>
-              <img src="images/team_card_4.jpg" alt="UI Designer" width="270" />
+              <img
+                src="./images/team_card_4.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+              />
               <figcaption>
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
@@ -147,9 +154,9 @@
     </main>
     <footer>
       <a href="">WebStudio</a>
+      <!--Контактная информация-->
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
       <address>
-        <!--Контактная информация-->
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
