--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!--Контактная информация-->
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
