--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <adress>
-        <!--Kонтакы-->
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </adress>
+      <!--Kонтакы-->
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -98,56 +96,40 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <figure>
-              <img
-                src="./images/team_card_1.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
-              <figcaption>
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team_card_1.jpg"
+              alt="Игорь Демьяненко"
+              width="270"
+            />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/team_card_2.jpg"
-                alt="Ольга Репина"
-                width="270"
-              />
-              <figcaption>
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team_card_2.jpg"
+              alt="Ольга Репина"
+              width="270"
+            />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/team_card_3.jpg"
-                alt="Николай Тарасов"
-                width="270"
-              />
-              <figcaption>
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team_card_3.jpg"
+              alt="Николай Тарасов"
+              width="270"
+            />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="./images/team_card_4.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-              />
-              <figcaption>
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="./images/team_card_4.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+            />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -155,9 +137,9 @@
     <footer>
       <a href="">WebStudio</a>
       <!--Контактная информация-->
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        г. Киев, пр-т Леси Украинки, 26
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
